Revision history for Perl module Protocol::DBus

0.07
- Changed do_authn() to return falsy until the Hello response arrives back.
  I don’t believe this is a breaking change, but it does remove the condition
  where authn is done but the connection name is not yet established.
- Added DBUS_COOKIE_SHA1 authentication support.

0.06 Sat 1 Dec 2018
- Socket::MsgHdr is no longer required.
- BREAKING CHANGE: Socket::MsgHdr must now be loaded prior to D-Bus
authentication in order for UNIX FD passing to work.

0.05 Thu 15 Nov 2018
- Add proper UNIX_FD support and an example of its use.
- Add preserve_variant_signatures() mode.
- Add send_signal() method.
- Update documentation, add README.md.

0.04 Wed 14 Nov 2018
- Fix DICT unmarshaling alignment.
- Add receive.pl example and two contributed ones.

0.03 Sun 11 Nov 2018
- Disable UNIX_FD stuff until it can be made to work.

0.02 Sun 11 Nov 2018
- Fix some examples, remove broken example script

0.01 Tue 2 Oct 2018
- Initial release