@@ -1,10 +1,16 @@
 Revision history for Perl module Protocol::DBus
 
 0.07
-- Changed do_authn() to return falsy until the Hello response arrives back.
-  I don’t believe this is a breaking change, but it does remove the condition
-  where authn is done but the connection name is not yet established.
+- Rename do_authn() to initialize(), and make it return falsy until the
+  “Hello” response arrives back. This removes the workflow state where
+  authn is done but the connection name is not yet established. I don’t
+  believe this should break anything since get_message() never actually
+  returned the “Hello” response.
+- Rename authn_pending_send() to init_pending_send().
 - Added DBUS_COOKIE_SHA1 authentication support.
+- Implement fallback when server indicates authn mechanisms
+  besides EXTERNAL.
+- Fix parsing of DBus addresses
 
 0.06 Sat 1 Dec 2018
 - Socket::MsgHdr is no longer required.
